syntax = "proto3";

import "common/id.proto";
option (ecs_component_id) = 1050;

enum YGPositionType {
  YGPositionTypeStatic = 0;
  YGPositionTypeRelative = 1;
  YGPositionTypeAbsolute = 2;
}

enum YGAlign {
  YGAlignAuto = 0;
  YGAlignFlexStart = 1;
  YGAlignCenter = 2;
  YGAlignFlexEnd = 3;
  YGAlignStretch = 4;
  YGAlignBaseline = 5;
  YGAlignSpaceBetween = 6;
  YGAlignSpaceAround = 7;
}

enum YGUnit {
  YGUnitUndefined = 0;
  YGUnitPoint = 1;
  YGUnitPercent = 2;
  YGUnitAuto = 3;
}

enum YGDirection {
  YGDirectionInherit = 0;
  YGDirectionLTR = 1;
  YGDirectionRTL = 2;
}

enum YGFlexDirection {
  YGFlexDirectionColumn = 0;
  YGFlexDirectionColumnReverse = 1;
  YGFlexDirectionRow = 2;
  YGFlexDirectionRowReverse = 3;
}

enum YGWrap {
  YGWrapNoWrap = 0;
  YGWrapWrap = 1;
  YGWrapWrapReverse = 2;
}

enum YGJustify {
  YGJustifyFlexStart = 0;
  YGJustifyCenter = 1;
  YGJustifyFlexEnd = 2;
  YGJustifySpaceBetween = 3;
  YGJustifySpaceAround = 4;
  YGJustifySpaceEvenly = 5;
}

enum YGOverflow {
  YGOverflowVisible = 0;
  YGOverflowHidden = 1;
  YGOverflowScroll = 2;
}

enum YGDisplay {
  YGDisplayFlex = 0;
  YGDisplayNone = 1;
}

enum YGEdge {
  YGEdgeLeft = 0;
  YGEdgeTop = 1;
  YGEdgeRight = 2;
  YGEdgeBottom = 3;
  YGEdgeStart = 4;
  YGEdgeEnd = 5;
  YGEdgeHorizontal = 6;
  YGEdgeVertical = 7;
  YGEdgeAll = 8;
}

message PBUiTransform {
  int32 parent = 79;
  int32 right_of = 80;

  YGPositionType position_type = 1;

  YGAlign align_content = 2;
  YGAlign align_items = 3;
  YGAlign align_self = 4;
  YGFlexDirection flex_direction = 5;
  YGWrap flex_wrap = 6;
  YGJustify justify_content = 7;

  YGOverflow overflow = 8;
  YGDisplay display = 9;
  YGDirection direction = 10;

  float flex = 11;

  YGUnit flex_basis_unit = 13;
  float flex_basis = 14;

  float flex_grow = 15;
  float flex_shrink = 16;

  YGUnit width_unit = 17;
  float width = 18;
  YGUnit height_unit = 19;
  float height = 20;

  YGUnit min_width_unit = 21;
  float min_width = 22;
  YGUnit min_height_unit = 23;
  float min_height = 24;

  YGUnit max_width_unit = 31;
  float max_width = 32;
  YGUnit max_height_unit = 33;
  float max_height = 34;

  // non-standard
  reserved 40; // float aspect_ratio = 40;

  YGUnit position_left_unit = 41;
  float position_left = 42;
  YGUnit position_top_unit = 43;
  float position_top = 44;
  YGUnit position_right_unit = 45;
  float position_right = 46;
  YGUnit position_bottom_unit = 47;
  float position_bottom = 48;

  // margin
  YGUnit margin_left_unit = 51;
  float margin_left = 52;
  YGUnit margin_top_unit = 53;
  float margin_top = 54;
  YGUnit margin_right_unit = 55;
  float margin_right = 56;
  YGUnit margin_bottom_unit = 57;
  float margin_bottom = 58;

  YGUnit padding_left_unit = 61;
  float padding_left = 62;
  YGUnit padding_top_unit = 63;
  float padding_top = 64;
  YGUnit padding_right_unit = 65;
  float padding_right = 66;
  YGUnit padding_bottom_unit = 67;
  float padding_bottom = 68;

  reserved 71; // YGUnit border_left_unit = 71;
  float border_left = 72;
  reserved 73; // YGUnit border_top_unit = 73;
  float border_top = 74;
  reserved 75; // YGUnit border_right_unit = 75;
  float border_right = 76;
  reserved 77; // YGUnit border_bottom_unit = 77;
  float border_bottom = 78;
}


